# Expensetracker-MCPserver

./: .env.example  .gitignore  README.md  expenses.db  main.py  pyproject.toml
src/expensetracker/: __init__.py  database.py  server.py
