[project]
name = "expensetracker-mcpserver"
version = "0.1.0"
description = "A local MCP server for tracking personal expenses, built with FastMCP and SQLite"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.1.0",
]

[project.scripts]
expensetracker = "expensetracker.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expensetracker"]
